scrollbar fixed

--- a/style.css/architect.css
+++ b/style.css/architect.css
@@ -93,52 +93,32 @@ nav li a {
     margin-top: 20px;
 }
 
-/* responsive styles */
-/* mobile device version */
-@media screen and (max-width:576px) {
-    header {
-        padding: 20px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-
-}
-
-/* tablet or medium devices */
-@media screen and (min-width:576px) and (max-width:960px) {
-    header {
-        padding: 50px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
 
 /* main styles */
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 70px  ;
 }
 
 /* teams style */
 .team-container {
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
+    width: 100%;
 }
 
 .team-img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
+    
 }
 
 .team-content {
-    padding-left: 10px;
-    padding-right: 70px;
+    padding-left: 70px;
+    /* padding-right: 20px; */
+    
 }
 
 .spn-1 {
@@ -163,10 +143,34 @@ main {
 }
 
 .team-description {
-    width: 537px;
+    width: 100%;
     color: #727272;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
     padding-bottom: 15px;
+}
+
+/* responsive styles */
+/* mobile device version */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
 }
